licence3/Calculator_MVaP/calculator/CalculetteParser.java
// Generated from Calculette.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CalculetteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, TYPE=31, RETURN=32, 
		NEWLINE=33, WS=34, ENTIER=35, COMMENT=36, IDENTIFIANT=37;
	public static final int
		RULE_start = 0, RULE_calcul = 1, RULE_instruction = 2, RULE_expression = 3, 
		RULE_decl = 4, RULE_assignation = 5, RULE_condition = 6, RULE_bloc = 7, 
		RULE_fonction = 8, RULE_params = 9, RULE_args = 10, RULE_finInstruction = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "calcul", "instruction", "expression", "decl", "assignation", 
			"condition", "bloc", "fonction", "params", "args", "finInstruction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'read'", "'('", "')'", "'write'", "'while'", "'if'", "'else'", 
			"'for'", "';'", "'repeat'", "'until'", "'*'", "'/'", "'+'", "'-'", "'='", 
			"'true'", "'false'", "'!'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", 
			"'&&'", "'||'", "'{'", "'}'", "','", null, "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "TYPE", "RETURN", "NEWLINE", 
			"WS", "ENTIER", "COMMENT", "IDENTIFIANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Calculette.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  private TablesSymboles tablesSymboles = new TablesSymboles();

	   private String evalexpr(String op) {
	      if ( op.equals("*") ){
	          return "MUL\n";
	      } else if ( op.equals("+") ){
	          return "ADD\n";
	      } else if ( op.equals("-") ){
	          return "SUB\n";
	      } else if ( op.equals("/") ){
	          return "DIV\n";
	      } else {
	         System.err.println("Opérateur arithmétique incorrect : '"+op+"'");
	         throw new IllegalArgumentException("Opérateur arithmétique incorrect : '"+op+"'");
	      }
	    }

	    private String evalCondition (String op){
	        if(op.equals("==")){
	            return "EQUAL\n";
	        } else if(op.equals("!=")){
	            return "NEQ\n";
	        } else if(op.equals(">")){
	            return "SUP\n";
	        } else if(op.equals(">=")){
	            return "SUPEQ\n";
	        } else if(op.equals("<")){
	            return "INF\n";
	        } else if(op.equals("<=")){
	            return "INFEQ\n";
	        } else{
	          System.err.println("Comparateur incorrect : '"+op+"'");
	          throw new IllegalArgumentException("Comparateur incorrect : '"+op+"'");
	        }
	    }

	    private String evalLogicOperator (String op){
	        if(op.equals("&&")){
	            return "MUL\n";
	        } else if(op.equals("||")){
	            return "ADD\n";
	        } else{
	          System.err.println("Comparateur incorrect : '"+op+"'");
	          throw new IllegalArgumentException("Comparateur incorrect : '"+op+"'");
	        }
	    }

	    private int _cur_label = 1;
	    /** générateur de nom d'étiquettes pour les boucles */
	    private String getNewLabel() { return "B" +(_cur_label++); }


	public CalculetteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public CalculContext r;
		public TerminalNode EOF() { return getToken(CalculetteParser.EOF, 0); }
		public CalculContext calcul() {
			return getRuleContext(CalculContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			((StartContext)_localctx).r = calcul();
			setState(25);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CalculContext extends ParserRuleContext {
		public String code;
		public DeclContext decl;
		public FonctionContext fonction;
		public InstructionContext instruction;
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CalculetteParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CalculetteParser.NEWLINE, i);
		}
		public List<FonctionContext> fonction() {
			return getRuleContexts(FonctionContext.class);
		}
		public FonctionContext fonction(int i) {
			return getRuleContext(FonctionContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public CalculContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calcul; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterCalcul(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitCalcul(this);
		}
	}

	public final CalculContext calcul() throws RecognitionException {
		CalculContext _localctx = new CalculContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_calcul);
		 ((CalculContext)_localctx).code =  new String(); 
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(27);
					((CalculContext)_localctx).decl = decl();
					 _localctx.code += ((CalculContext)_localctx).decl.code; 
					}
					} 
				}
				setState(34);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			 _localctx.code += "  JUMP Main\n"; 
			setState(39);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(36);
					match(NEWLINE);
					}
					} 
				}
				setState(41);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(42);
				((CalculContext)_localctx).fonction = fonction();
				 _localctx.code += ((CalculContext)_localctx).fonction.code; 
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(50);
					match(NEWLINE);
					}
					} 
				}
				setState(55);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			 _localctx.code += "LABEL Main\n"; 
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__14) | (1L << T__27) | (1L << RETURN) | (1L << NEWLINE) | (1L << ENTIER) | (1L << IDENTIFIANT))) != 0)) {
				{
				{
				setState(57);
				((CalculContext)_localctx).instruction = instruction();
				 _localctx.code += ((CalculContext)_localctx).instruction.code; 
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 _localctx.code += "  HALT\n"; 
			}
			_ctx.stop = _input.LT(-1);
			 System.out.println(_localctx.code); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public String code;
		public ExpressionContext expression;
		public AssignationContext assignation;
		public Token IDENTIFIANT;
		public ConditionContext condition;
		public InstructionContext instruction;
		public InstructionContext i;
		public InstructionContext ie;
		public AssignationContext init;
		public AssignationContext incr;
		public BlocContext bloc;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FinInstructionContext finInstruction() {
			return getRuleContext(FinInstructionContext.class,0);
		}
		public List<AssignationContext> assignation() {
			return getRuleContexts(AssignationContext.class);
		}
		public AssignationContext assignation(int i) {
			return getRuleContext(AssignationContext.class,i);
		}
		public TerminalNode IDENTIFIANT() { return getToken(CalculetteParser.IDENTIFIANT, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CalculetteParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CalculetteParser.NEWLINE, i);
		}
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(CalculetteParser.RETURN, 0); }
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		int _la;
		try {
			int _alt;
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				((InstructionContext)_localctx).expression = expression(0);
				setState(68);
				finInstruction();

				             ((InstructionContext)_localctx).code = ((InstructionContext)_localctx).expression.code;
				        
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				finInstruction();

				            ((InstructionContext)_localctx).code = "";
				        
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				((InstructionContext)_localctx).assignation = assignation();
				setState(75);
				finInstruction();

				            ((InstructionContext)_localctx).code = ((InstructionContext)_localctx).assignation.code;
				        
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				match(T__0);
				setState(79);
				match(T__1);
				setState(80);
				((InstructionContext)_localctx).IDENTIFIANT = match(IDENTIFIANT);
				setState(81);
				match(T__2);
				setState(82);
				finInstruction();
				AdresseType adresse = tablesSymboles.getAdresseType((((InstructionContext)_localctx).IDENTIFIANT!=null?((InstructionContext)_localctx).IDENTIFIANT.getText():null)); ((InstructionContext)_localctx).code = "READ" + "\n"; _localctx.code+= (adresse.adresse>0?"STOREG ":"STOREL ") + adresse.adresse + "\n";
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				match(T__3);
				setState(86);
				match(T__1);
				setState(87);
				((InstructionContext)_localctx).expression = expression(0);
				setState(88);
				match(T__2);
				((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).expression.code + "WRITE" + "\n" + "POP" + "\n";
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(91);
				match(T__4);
				setState(92);
				match(T__1);
				setState(93);
				((InstructionContext)_localctx).condition = condition(0);
				setState(94);
				match(T__2);
				setState(95);
				((InstructionContext)_localctx).instruction = instruction();
				String label1=getNewLabel(); String label2=getNewLabel(); ((InstructionContext)_localctx).code = "LABEL " + label1 + "\n" + ((InstructionContext)_localctx).condition.code + "JUMPF " + label2 + "\n" + ((InstructionContext)_localctx).instruction.code + "JUMP "  + label1 + "\n" + "LABEL " + label2 + "\n";
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(98);
				match(T__5);
				setState(99);
				match(T__1);
				setState(100);
				((InstructionContext)_localctx).condition = condition(0);
				setState(101);
				match(T__2);
				setState(102);
				((InstructionContext)_localctx).i = instruction();
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(103);
					match(NEWLINE);
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(109);
				match(T__6);
				setState(110);
				((InstructionContext)_localctx).ie = instruction();
				String label3=getNewLabel(); String label4=getNewLabel(); ((InstructionContext)_localctx).code = ((InstructionContext)_localctx).condition.code + "JUMPF " + label4 + "\n" + ((InstructionContext)_localctx).i.code + "JUMP " + label3 + "\n" + "LABEL " + label4 + "\n" + ((InstructionContext)_localctx).ie.code + "LABEL " + label3 + "\n";
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(113);
				match(T__5);
				setState(114);
				match(T__1);
				setState(115);
				((InstructionContext)_localctx).condition = condition(0);
				setState(116);
				match(T__2);
				setState(117);
				((InstructionContext)_localctx).i = ((InstructionContext)_localctx).instruction = instruction();
				 String label5=getNewLabel();  ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).condition.code + "JUMPF " + label5 + "\n" + ((InstructionContext)_localctx).instruction.code + "LABEL " + label5 + "\n";
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(120);
				match(T__7);
				setState(121);
				match(T__1);
				setState(122);
				((InstructionContext)_localctx).init = assignation();
				setState(123);
				match(T__8);
				setState(124);
				((InstructionContext)_localctx).condition = condition(0);
				setState(125);
				match(T__8);
				setState(126);
				((InstructionContext)_localctx).incr = assignation();
				setState(127);
				match(T__2);
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(128);
						match(NEWLINE);
						}
						} 
					}
					setState(133);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				setState(134);
				((InstructionContext)_localctx).instruction = instruction();
				String label6=getNewLabel(); String label7=getNewLabel(); ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).init.code + "LABEL " + label6 + "\n"  + ((InstructionContext)_localctx).condition.code + "JUMPF " + label7 + "\n" + ((InstructionContext)_localctx).instruction.code + ((InstructionContext)_localctx).incr.code + "\n" +  "JUMP " + label6 + "\n" + "LABEL " + label7 + "\n";
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(137);
				match(T__9);
				setState(138);
				((InstructionContext)_localctx).instruction = instruction();
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(139);
					match(NEWLINE);
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145);
				match(T__10);
				setState(146);
				match(T__1);
				setState(147);
				((InstructionContext)_localctx).condition = condition(0);
				setState(148);
				match(T__2);
				String label8=getNewLabel(); ((InstructionContext)_localctx).code =  "LABEL " + label8 + "\n"  + ((InstructionContext)_localctx).instruction.code + ((InstructionContext)_localctx).condition.code + "JUMPF " + label8 + "\n";
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(151);
				((InstructionContext)_localctx).bloc = bloc();

				            ((InstructionContext)_localctx).code = ((InstructionContext)_localctx).bloc.code;
				        
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(154);
				match(RETURN);
				setState(155);
				((InstructionContext)_localctx).expression = expression(0);
				setState(156);
				finInstruction();

				          AdresseType retour=tablesSymboles.getAdresseType("adresseRetour");
				          ((InstructionContext)_localctx).code = ((InstructionContext)_localctx).expression.code;
				          _localctx.code+="STOREL " + retour.adresse + "\n";
				          _localctx.code+="RETURN " + "\n";
				        
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public String code;
		public ExpressionContext a;
		public Token c;
		public Token IDENTIFIANT;
		public ArgsContext args;
		public Token op;
		public ExpressionContext b;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode ENTIER() { return getToken(CalculetteParser.ENTIER, 0); }
		public TerminalNode IDENTIFIANT() { return getToken(CalculetteParser.IDENTIFIANT, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(162);
				match(T__1);
				setState(163);
				((ExpressionContext)_localctx).a = expression(0);
				setState(164);
				match(T__2);
				 ((ExpressionContext)_localctx).code =  ((ExpressionContext)_localctx).a.code; 
				}
				break;
			case 2:
				{
				setState(167);
				match(T__14);
				setState(168);
				((ExpressionContext)_localctx).a = expression(4);
				 ((ExpressionContext)_localctx).code =  ((ExpressionContext)_localctx).a.code + " PUSHI -1\n  MUL\n" ;
				}
				break;
			case 3:
				{
				setState(171);
				((ExpressionContext)_localctx).c = match(ENTIER);
				 ((ExpressionContext)_localctx).code =  "  PUSHI " + (((ExpressionContext)_localctx).c!=null?((ExpressionContext)_localctx).c.getText():null) + "\n"; 
				}
				break;
			case 4:
				{
				setState(173);
				((ExpressionContext)_localctx).IDENTIFIANT = match(IDENTIFIANT);
				AdresseType at = tablesSymboles.getAdresseType((((ExpressionContext)_localctx).IDENTIFIANT!=null?((ExpressionContext)_localctx).IDENTIFIANT.getText():null)); ((ExpressionContext)_localctx).code =  (at.adresse>0?"PUSHG  ":"PUSHL ") + at.adresse + "\n";
				}
				break;
			case 5:
				{
				setState(175);
				((ExpressionContext)_localctx).IDENTIFIANT = match(IDENTIFIANT);
				setState(176);
				match(T__1);
				setState(177);
				((ExpressionContext)_localctx).args = args();
				setState(178);
				match(T__2);

				             ((ExpressionContext)_localctx).code =  "PUSHI 0" + "\n";
				             _localctx.code+=((ExpressionContext)_localctx).args.code;
				             _localctx.code+= "CALL " + (((ExpressionContext)_localctx).IDENTIFIANT!=null?((ExpressionContext)_localctx).IDENTIFIANT.getText():null) + "\n";
				             for (int i=0; i<((ExpressionContext)_localctx).args.size; i++){
				               _localctx.code+="POP " + "\n";
				             }
				         
				}
				break;
			}
